Bug 445951 - missing keyword 'public' in xpcom/glue/nsAutoLock.h, r=bsmedberg